<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    android:gravity="center"
    android:background="@drawable/bg_color">

    <TextView
        android:id="@+id/ratingmenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rating_tb"
        android:textAlignment="center"
        android:textSize="29sp"/>

    <Button
        android:id="@+id/fdbckmain"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/rating_main"
        android:textSize="20sp"
        android:onClick="doFeedback"
        android:textColor="#FFFFFF"
        android:background="@drawable/btn_color"/>

    <Button
        android:id="@+id/reviews"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/review_btn"
        android:textSize="20sp"
        android:onClick="doReview"
        android:textColor="#FFFFFF"
        android:background="@drawable/btn_color"/>

</LinearLayout>