<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".ReviewMain">

    <TextView
        android:id="@+id/ratingtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rating_title"
        android:layout_marginTop="20dp"
        android:backgroundTint="#0000"/>

    <EditText
        android:id="@+id/ratingbox"
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:layout_marginTop="50dp"
        android:hint="@string/rating_box"/>

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginTop="60dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">

        <RatingBar
            android:id="@+id/ratingbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            />

        <Button
            android:id="@+id/ratingbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:text="@string/submit_button"
            android:layout_centerHorizontal="true"
            android:onClick="doSubmit" />

    </RelativeLayout>


</LinearLayout>