<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_color">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:fontFamily="sans-serif-light"
        android:paddingTop="15dp"
        android:text="@string/fn_healthy_plate"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_gravity="center_vertical|center_horizontal"
        android:foregroundGravity="center">

        <VideoView
            android:id="@+id/vdo"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:focusable="auto"
            android:foregroundGravity="center"
            android:foregroundTint="#605A5A"/>
    </FrameLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:orientation="horizontal"
    android:layout_gravity="center">
    <Button
        android:id="@+id/btnPlay"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/btn_color"
        android:textColor="@color/white"
        android:onClick="doPlay"
        android:text="@string/fn_btn_play"
        style="?android:attr/buttonBarButtonStyle" />

    <Button
        android:id="@+id/btnPlay2"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/btn_color"
        android:textColor="@color/white"
        android:text="@string/fn_btn_next"
        android:onClick="goNutrition"
        style="?android:attr/buttonBarButtonStyle" />
</LinearLayout>



</LinearLayout>